[package]
name = "klaver"
version = "0.2.0"
edition = "2024"

[features]
swc = ["klaver-modules/swc"]

full = ["fetch", "crypto", "intl"]

fetch = ["klaver-wintertc/fetch"]
crypto = ["klaver-wintertc/crypto"]
intl = ["klaver-wintertc/intl"]
intl-baked = ["klaver-wintertc/intl-baked"]

[dependencies]
klaver-wintertc = { path = "../klaver-wintertc", features = [
    "module",
    "tokio",
] }
klaver-vm = { path = "../klaver-vm" }
klaver-modules = { path = "../klaver-modules", features = ["file-resolver"] }
klaver-runtime = { path = "../klaver-runtime" }
rquickjs = { workspace = true }
futures.workspace = true


[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
