[package]
name = "klaver"
version = "0.3.0"
edition = "2024"

[features]
swc = ["klaver-modules/swc"]

full = ["klaver-wintertc/full"]

fetch = ["klaver-wintertc/fetch"]
crypto = ["klaver-wintertc/crypto"]
worker = ["klaver-wintertc/worker"]
streams = ["klaver-wintertc/streams"]
timers = ["klaver-wintertc/timers"]
intl = ["klaver-wintertc/intl"]
intl-baked = ["klaver-wintertc/intl-baked"]


[dependencies]
klaver-wintertc = { path = "../klaver-wintertc", features = ["module"] }
klaver-vm = { path = "../klaver-vm" }
klaver-modules = { path = "../klaver-modules", features = ["file-resolver"] }
klaver-runtime = { path = "../klaver-runtime" }
rquickjs = { workspace = true }
futures.workspace = true


[dev-dependencies]
compio = { version = "0.19", features = ["runtime", "macros"] }
klaver-wintertc = { path = "../klaver-wintertc", features = [
    "module",
    "compio",
] }
